[package]
name = "serial-bme680"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "serial-bme680"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3"] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.19.0", features = [
  "defmt",
  "esp32c3",
  "panic-handler",
] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32c3"] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
opt-level = "s"
debug = 2  # prefer slower builds but better debugging experience
lto = "fat"
codegen-units = 1  # LLVM can perform better optimizations using a single thread
